<resources>
    <string name="app_name">Mobile Machine Monitoring</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">- OR -</string>
    <string name="register">Register</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="personal_data">Personal Data</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="email">Email</string>
    <string name="user_unique_id">User Unique ID</string>

    <string name="breakdown_list">Breakdown List</string>
    <string name="line_doubledot">Line :</string>
    <string name="station_doubledot">Station :</string>
    <string name="more_options">More Options</string>


    <string name="stringWelcome">Welcome %s</string>
    <string name="stringHi">Hi, %s</string>
    <string name="stringMachineInfo">Line %1$s, Station %2$s, ID %3$s</string>


    <string name="machine_dashboard">Machine Dashboard</string>
    <string name="production_line">Production Line</string>
    <string name="assembly_line">Assembly Line</string>
    <string name="waiting_confirmation">Confirming</string>
    <string name="repairing">Repairing</string>
    <string name="breakdown">Breakdown</string>
    <string name="running">Running</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="status_color">Status Color</string>
    <string name="status_color_for_breakdown_list">Status Color for Breakdown List</string>
    <string name="machine_name_doubledot">Machine Name :</string>
    <string name="id_doubledot">ID :</string>
    <string name="machine_id_doubledot">Machine ID :</string>
    <string name="date_doubledot">Date :</string>
    <string name="date">Date</string>
    <string name="duration_doubledot">Duration :</string>
    <string name="pic_doubledot">PIC :</string>
    <string name="pic">PIC</string>
    <string name="problem_description">Problem Description</string>
    <string name="solution_picture">Solution Picture</string>
    <string name="solution_description">Solution Description</string>
    <string name="skip">Skip</string>
    <string name="machine_information">Machine Information</string>
    <string name="machine_information_doubledot">Machine Information :</string>
    <string name="report_history">Report History</string>
    <string name="upload_time_doubledot">Upload Time :</string>
    <string name="use_camera_to_scan_qr_code">Use camera to scan QR code</string>
    <string name="doubledot">:</string>
    <string name="line">Line</string>
    <string name="station">Station</string>
    <string name="upload_time">Upload Time</string>
    <string name="problem_image">Problem Image</string>
    <string name="solution_image">Solution Image</string>
    <string name="breakdown_time">Breakdown Time</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_breakdown">No breakdown</string>
    <string name="scroll_down_to_see_breakdown_details">Scroll down to see Breakdown Details</string>
    <string name="response_time">Response Time</string>
    <string name="repair_duration">Repair Duration</string>
    <string name="please_enable_camera_permission">Please enable camera permission</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

</resources>
