<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivUserProfilePicture"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_profile_picture"
        android:src="@drawable/ic_person_black_24dp"
        app:cornerRadius="70dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtHiUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/personalData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/personal_data"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/personalDataInfo"
            android:text="@string/name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUserProfileName"
            style="@style/personalDataTextView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/personalDataInfo"
            android:text="@string/email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUserProfileEmail"
            style="@style/personalDataTextView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/personalDataInfo"
            android:text="@string/mobile_phone_number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUserProfileMobilePhoneNumber"
            style="@style/personalDataTextView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/personalDataInfo"
            android:text="@string/user_unique_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUserProfileUserUid"
            style="@style/personalDataTextView" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_changes"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_out" />


</LinearLayout>