<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportLine"
                    android:text="@string/line"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportStation"
                    android:text="@string/station"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportID"
                    android:text="@string/id"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportPIC"
                    style="@style/reportTextView"
                    android:text="@string/pic" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportBreakdownTime"
                    style="@style/reportTextView"
                    android:text="@string/breakdown_time" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportResponseTime"
                    style="@style/reportTextView"
                    android:text="@string/response_time" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportUploadTime"
                    android:text="@string/upload_time"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtStringReportRepairDuration"
                    style="@style/reportTextView"
                    android:text="@string/repair_duration" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot1"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot2"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot3"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot4"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot5"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot6"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot7"
                    style="@style/reportDoubleDot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/doubledot8"
                    style="@style/reportDoubleDot" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportLine"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportStation"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportID"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportPIC"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportBreakdownTime"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportResponseTime"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportUploadTime"
                    style="@style/reportTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtReportRepairDuration"
                    style="@style/reportTextView" />

            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:id="@+id/ivReportProblemImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/problem_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtReportProblemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/problem_description"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivReportSolutionImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/solution_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtReportSolutionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/solution_description"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>